--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,24 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* width */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 7px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
-    background: #e5e7eb;
+    background: #2d3748;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #fff;
-    border-radius: 5px;
+    background: #cbd5e0;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #f9fafb;
+    background: #718096;
 }
